--- a/Modules/PrismOutlook.Modules.Mail/Views/MailList.xaml
+++ b/Modules/PrismOutlook.Modules.Mail/Views/MailList.xaml
@@ -1,10 +1,94 @@
 ﻿<UserControl x:Class="PrismOutlook.Modules.Mail.Views.MailList"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:ig="http://schemas.infragistics.com/xaml"
+             xmlns:igWpf="http://schemas.infragistics.com/xaml/wpf"  
+             xmlns:igDP="http://infragistics.com/DataPresenter"
+             xmlns:igEditors="http://infragistics.com/Editors"
+             xmlns:igDock="http://infragistics.com/DockManager"       
+             xmlns:igThemes="http://infragistics.com/Themes" 
              xmlns:prism="http://prismlibrary.com/"             
              prism:ViewModelLocator.AutoWireViewModel="True">
 
    <Grid>
-      <TextBlock Text="{Binding Title}"></TextBlock>
+      <Grid.RowDefinitions>
+         <RowDefinition Height="40"/>
+         <RowDefinition Height="*"/>
+      </Grid.RowDefinitions>
+      <Grid.ColumnDefinitions>
+         <ColumnDefinition Width="250"/>
+         <ColumnDefinition Width="*"/>
+      </Grid.ColumnDefinitions>
+
+      <Button Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="{Binding Title}" Command="{Binding TestCommand}"/>
+
+      <!-- ================================================================= Grid Control ====================================================================== -->
+      <igDP:XamDataGrid x:Name="VariablesDataGrid" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5" MinWidth="100" MinHeight="100"
+                              Theme="IGTheme" AutoFit="True"   
+                              IsEnabled="True"
+                              DataSource="{Binding ElementName=CreateVariablesRootLayoutGrid, Path=DataContext.LsVariablesCollection, NotifyOnSourceUpdated=True, NotifyOnTargetUpdated=True, UpdateSourceTrigger=PropertyChanged}">
+         <igDP:XamDataGrid.Resources>
+            <!-- This Style puts a CheckBox into the record selectors. -->
+            <Style TargetType="{x:Type igDP:RecordSelector}" BasedOn="{x:Null}">
+               <Setter Property="Template">
+                  <Setter.Value>
+                     <ControlTemplate TargetType="{x:Type igDP:RecordSelector}">
+                        <CheckBox HorizontalAlignment="Center" VerticalAlignment="Center" IsChecked="{Binding Path=DataItem.IsChecked, Mode=TwoWay}" />
+                     </ControlTemplate>
+                  </Setter.Value>
+               </Setter>
+            </Style>
+
+            <!-- This Style puts a CheckBox into the header area above the record selectors. -->
+            <Style TargetType="{x:Type igDP:HeaderPrefixArea}" BasedOn="{x:Null}">
+               <Setter Property="Visibility" Value="Visible" />
+               <Setter Property="Template">
+                  <Setter.Value>
+                     <ControlTemplate TargetType="{x:Type igDP:HeaderPrefixArea}">
+                        <CheckBox HorizontalAlignment="Center" VerticalAlignment="Center" IsChecked="{Binding Path=DataPresenter.DataContext.AllMembersAreChecked, Mode=TwoWay}" />
+                     </ControlTemplate>
+                  </Setter.Value>
+               </Setter>
+            </Style>
+         </igDP:XamDataGrid.Resources>
+
+         <!-- Turn off cell editing -->
+         <igDP:XamDataGrid.FieldSettings>
+            <igDP:FieldSettings AllowEdit="False" />
+         </igDP:XamDataGrid.FieldSettings>
+
+         <igDP:XamDataGrid.FieldLayoutSettings>
+            <igDP:FieldLayoutSettings AutoGenerateFields="False" HighlightAlternateRecords="True" AllowAddNew="False" AllowDelete="False" 
+                                              AutoFitMode="Always"/>
+         </igDP:XamDataGrid.FieldLayoutSettings>
+
+         <!-- Define Fields -->
+         <igDP:XamDataGrid.FieldLayouts>
+            <igDP:FieldLayout Key="LSVariableBase" IsDefault="True">
+               <igDP:TemplateField Name="VariableId" Label="ID" Width="30">
+                  <igDP:TemplateField.DisplayTemplate>
+                     <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                           <TextBlock Text="{igEditors:TemplateEditorValueBinding}" />
+                        </StackPanel>
+                     </DataTemplate>
+                  </igDP:TemplateField.DisplayTemplate>
+               </igDP:TemplateField>
+               <igDP:TextField Name="VariableName" Label="Name" Width="40" />
+               <igDP:TextField Name="VariableDescription" Label="Description" Width="50" />
+               <igDP:TextField Name="DataType" Label="DataType" Width="30" />
+               <igDP:TextField Name="InitialValue" Label="InitialValue" Width="30" />
+               <igDP:Field Name="IsChecked" Visibility="Collapsed" />
+               <!-- Sort by variable name -->
+               <igDP:FieldLayout.SortedFields>
+                  <igDP:FieldSortDescription FieldName="VariableName" />
+               </igDP:FieldLayout.SortedFields>
+            </igDP:FieldLayout>
+         </igDP:XamDataGrid.FieldLayouts>
+      </igDP:XamDataGrid>
+
+      <Grid Grid.Row="1" Grid.Column="1" MinWidth="250" Background="LightBlue">
+
+      </Grid>
    </Grid>
 </UserControl>
